// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReputationSummaryCard — snapshot matches snapshot with full data and trending up 1`] = `
<section
  aria-labelledby="summary-card-heading"
  class="w-full max-w-5xl mx-auto px-4 pt-8 sm:px-6 lg:px-8"
>
  <div
    class="rounded-3xl border-[var(--border)] bg-[var(--card)] p-5 shadow-sm sm:p-6"
  >
    <h2
      class="sr-only"
      id="summary-card-heading"
    >
      Shareable reputation summary for 
      Alice
    </h2>
    <div
      class="flex flex-col gap-4 sm:flex-row sm:items-center sm:justify-between"
    >
      <div
        class="flex items-center gap-3"
      >
        <div
          aria-hidden="true"
          class="flex h-10 w-10 items-center justify-center rounded-xl bg-[var(--foreground)] text-sm font-semibold text-[var(--background)]"
        >
          A
        </div>
        <div
          class="min-w-0"
        >
          <p
            class="text-base font-semibold text-[var(--foreground)] truncate"
          >
            Alice
          </p>
          <p
            class="text-sm text-[var(--muted-foreground)]"
          >
            Score
             
            <span
              aria-label="Reputation score 4.5 out of 5"
              aria-valuemax="5"
              aria-valuemin="0"
              aria-valuenow="4.5"
              class="font-semibold text-[var(--foreground)]"
              role="meter"
            >
              4.5
            </span>
             / 5
          </p>
        </div>
      </div>
      <div
        class="flex flex-wrap items-center gap-3"
      >
        <span
          class="rounded-xl bg-[var(--surface)] px-3 py-1 text-sm font-medium text-[var(--foreground)]"
          data-testid="summary-level"
        >
          Expert
        </span>
        <span
          aria-label="Reputation trend: Trending up"
          class="inline-flex items-center gap-1 rounded-xl bg-[var(--surface)] px-3 py-1 text-sm font-medium text-[var(--muted-foreground)]"
          data-testid="summary-trend"
        >
          ↑
           
          Trending up
        </span>
        <button
          aria-label="Copy reputation summary link to clipboard"
          aria-pressed="false"
          class="inline-flex items-center gap-1.5 px-3 py-1.5 rounded-xl text-sm font-medium border transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-1 focus-visible:ring-blue-500 bg-[var(--card)] border-[var(--border)] text-[var(--foreground)] hover:bg-[var(--surface)]"
          data-testid="copy-summary-link-btn"
          title="Copy shareable link"
          type="button"
        >
          <svg
            aria-hidden="true"
            fill="none"
            height="14"
            viewBox="0 0 14 14"
            width="14"
          >
            <path
              d="M5.5 8.5a3.5 3.5 0 0 1 0-4.95l1.41-1.41a3.5 3.5 0 0 1 4.95 4.95"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.3"
            />
            <path
              d="M8.5 5.5a3.5 3.5 0 0 1 0 4.95l-1.41 1.41a3.5 3.5 0 0 1-4.95-4.95"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.3"
            />
          </svg>
          Copy link
        </button>
      </div>
    </div>
  </div>
</section>
`;

exports[`ReputationSummaryCard — snapshot matches snapshot with null score 1`] = `
<section
  aria-labelledby="summary-card-heading"
  class="w-full max-w-5xl mx-auto px-4 pt-8 sm:px-6 lg:px-8"
>
  <div
    class="rounded-3xl border-[var(--border)] bg-[var(--card)] p-5 shadow-sm sm:p-6"
  >
    <h2
      class="sr-only"
      id="summary-card-heading"
    >
      Shareable reputation summary for 
      Bob
    </h2>
    <div
      class="flex flex-col gap-4 sm:flex-row sm:items-center sm:justify-between"
    >
      <div
        class="flex items-center gap-3"
      >
        <div
          aria-hidden="true"
          class="flex h-10 w-10 items-center justify-center rounded-xl bg-[var(--foreground)] text-sm font-semibold text-[var(--background)]"
        >
          B
        </div>
        <div
          class="min-w-0"
        >
          <p
            class="text-base font-semibold text-[var(--foreground)] truncate"
          >
            Bob
          </p>
          <p
            class="text-sm text-[var(--muted-foreground)]"
          >
            No reputation yet
          </p>
        </div>
      </div>
      <div
        class="flex flex-wrap items-center gap-3"
      >
        <button
          aria-label="Copy reputation summary link to clipboard"
          aria-pressed="false"
          class="inline-flex items-center gap-1.5 px-3 py-1.5 rounded-xl text-sm font-medium border transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-1 focus-visible:ring-blue-500 bg-[var(--card)] border-[var(--border)] text-[var(--foreground)] hover:bg-[var(--surface)]"
          data-testid="copy-summary-link-btn"
          title="Copy shareable link"
          type="button"
        >
          <svg
            aria-hidden="true"
            fill="none"
            height="14"
            viewBox="0 0 14 14"
            width="14"
          >
            <path
              d="M5.5 8.5a3.5 3.5 0 0 1 0-4.95l1.41-1.41a3.5 3.5 0 0 1 4.95 4.95"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.3"
            />
            <path
              d="M8.5 5.5a3.5 3.5 0 0 1 0 4.95l-1.41 1.41a3.5 3.5 0 0 1-4.95-4.95"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.3"
            />
          </svg>
          Copy link
        </button>
      </div>
    </div>
  </div>
</section>
`;
